--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,28 @@
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'Raleway', sans-serif;
+    color: #4e4039;
+}
+a:hover{
+    color: orangered;
+}
+/* .back{
+    background: #fff; 
+    box-shadow: 0 0 10px #999;
+    width: 100%;
+    height: 68px;
+}
+.header-logo h2{ 
+    color: #998c85;
+    padding: 10px;
+    font-size: 30px;
+    font-weight:400;
+    font-style:normal;
+    font-variant:normal;
+    text-transform:none;
+    text-decoration:none solid rgb(122, 105, 96);
+    text-align:start;
+    text-indent:0px;
 }
 .container{
     width: 1175px;
@@ -13,16 +35,245 @@ h1,h2,h3,h4,h5,h6{
 .heading-sec{
  display: flex;
  justify-content: space-between;
+ padding: 7px;
+ 
+ 
 }
 .nav-sec ul{
     display: flex;
 }
 .nav-sec ul li{
-    padding: 10px;
+    padding: 15px;
     list-style: none;
-    
+    padding-left: 29px;
+    color: black;
 
 }
 .nav-sec ul li a{
     text-decoration: none;
+    text-transform: capitalize;
+    font-size: 15px;
+    text-indent: 0px;
+    font-variant: normal;
+    font-weight: 400;
+
+}
+.nav-sec ul button{
+    width: 117px;
+    border: none;
+    border-radius: 25px;
+    text-transform: capitalize;
+    background-color: #eb5e20;
+    height: 43px;
+    margin-top: 7px;
+    color: #fff
+
+}
+.check{
+    font-size: 30px;
+
+}
+
+
+
+
+
+/* banner starts */
+/* .banner-section{
+background-color: #fef8f5;
+}
+.ban{
+    display: flex;
+}
+.ban-text{
+    width: 50%;
+    padding: 76px 13px;
+}
+.ban-text h1{
+    color: #4e4039;
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 700;
+    padding: 10px;
+
+
+}
+.ban-text p{
+    font-size: 24px;
+    line-height: 28.8px;
+    color: #a08f86;
+    font-weight: 400;
+    padding: 10px;
+}
+.ban-text button{
+    width: 163px;
+    border: none;
+    border-radius: 5px;
+    text-transform: capitalize;
+    background-color: #eb5e20;
+    height: 43px;
+    margin-top: 7px;
+    color: #fff;
+    font-size: 18px;  
+    padding: 10px;  
+    margin: 12px;
+}
+.ban-img {
+    width: 50%;
+}
+
+.ban-img img{
+    height: 376px;
+    padding: 42px;
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out; 
+    margin-top: 5px;
+}
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 15px); }
+  100%   { transform: translate(0, -0px); }   
+}
+@media only screen and (max-width: 1024px) {
+    .container{
+        width: 990px;
+        margin: auto;
+    }
+    .nav-sec ul{
+        display: none;
+    }
+.ban{
+    display: flex;
+    flex-wrap: wrap;
+}
+.ban-text{
+    width: 100%;
+    align-items: center;
+}
+.ban-text h1{
+    color: #4e4039;
+    font-size: 25px;
+    font-weight: 700;
+}
+.ban-text p{
+    font-size: 20px;
+    color: #636363;
+    font-weight: 400;
+    padding: 10px;
+}
+.ban-text button{
+    width: 163px;
+    border: none;
+    border-radius: 5px;
+    text-transform: capitalize;
+    background-color: #eb5e20;
+    height: 43px;
+    margin-top: 7px;
+    color: #fff;
+    font-size: 18px;  
+    padding: 10px;  
+    margin: 12px;
+}
+.ban-img {
+    width: 100%;
+}
+} */
+.vol-img {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+} 
+.vol-img img{
+   height: 225px;
+   align-items: center;
+}
+.vol-text h1{
+    font-size: 29px;
+    text-align: left;
+    padding: 10px;
+
+}
+.vol-text p{
+    color: #636363;
+    text-align: inherit;
+    padding: 10px;
+}
+.vol-ico{
+    font-size: xx-large;
+    color:#f39e7a;
+    padding: 9px;
+}
+@media screen and (min-width:768px) {
+    .vol-1{
+        display: flex;
+    }
+    .vol-over h1{
+        font-size: 24px;
+
+    }
+    .vol-img img{
+        height: 300px;
+        align-items: center;
+     }.vol-ico{
+        font-size: xx-large;
+        color:#f39e7a;
+        padding: 9px;
+    }
+}
+@media screen and (min-width:1200px) {
+    .container{
+        width: 1175px;
+        margin: auto;
+    }
+    .voluput{
+        display: flex;
+        height: 500px;
+        
+        
+    }
+    .vol-text{
+        margin: auto;
+      
+    }
+    .vol-text h1{
+        font-size: 38px;
+        
+      
+    }
+    .vol-img img{
+        height: 350px;
+        align-items: center;
+     }
+    .vol-over h1{
+        font-size: 26px;
+
+    }
+    .vol-img {
+       width: 50%;
+     }
+
+     .vol-text{
+        width: 50%;
+     }
+    .vol-img img{
+        height: 300px;
+        align-items: center;
+     }.vol-ico{
+        font-size: 40px;
+        color:#f39e7a;
+        padding: 9px;
+    }
+}
+.services h1{
+    text-align: center;
+    font-size: 30px;
+    margin: auto;
+
+}
+.services h3{
+    text-align: center;
+    color: lightgray;
+    font-size: 23px;
 }
