--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,9 @@ background-color: #fef8f5;
         
       
     }
+    .vol-text p{
+        font-size: 18px;
+    }
     .vol-img img{
         height: 350px;
         align-items: center;
@@ -354,5 +357,79 @@ hr{
         color: black;
         padding: 15px;
     }
+
+}
+.port-sec button{
+    border: none;
+    background: #fff;
+    padding-right: 15px;
+}
+.port-sec h1{
+    text-align: center;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    width:85% ;
+    margin: auto;
+
+}
+.port-sec h4{
+    text-align: center;
+    color: lightgray;
+    font-size: 23px;
+    padding: 8px;
+    margin: auto;
+
+}
+
+.portfolio-box{
+    position: relative;
+}
+.portfolio-text{
+    position: absolute;
+    top: 50%;
+    left: 45%;
+}
+.portfolio-icons{
+    position: absolute;
+    right: -181px;
+    border-radius: 18px;
+    top: -143px;
+    background-color: currentColor;
+    height: 286px;
+    width:387px;
+    color: rgba(0, 0, 0, 0.41);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* opacity: 0; */
+    transition: all 0.5s ease;
+
+}
+.txt h5{
+    font-size: 20px;
+    color: #fff;
+    z-index: 999999999;
+    margin-top: 17px;
+}
+.portfolio-icons a{
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 100%;
+    text-align: center;
+    text-decoration: none;
+    line-height: 20px;
+    margin-top: 12px;
+    text-decoration: none;
+}
+.portfolio-box img{
+    width: 90%;
+    margin: auto;
+    align-items: center;
+    display: block;
+    border-radius: 25px;
+    padding: 12px;
+
 
 }
